src/test/deca/context/invalid/created/class-extends-first.deca
//Description :
// Test de extends avant la définition de la super classe
//
// Resultats :
// Erreur


class Premiere extends Seconde {

}

class Seconde {

}

{}
